// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Health /> renders correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Cluster Health
    </h2>
    <button
      class="btn btn-link"
      type="button"
    >
      See all
    </button>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-health__body"
    >
      <div
        class="kubevirt-health__item"
      >
        <div
          class="kubevirt-health__icon kubevirt-health__icon--ok"
        >
          <span
            aria-hidden="true"
            class="fa fa-check-circle"
          />
        </div>
        <div>
          <span
            class="kubevirt-health__text"
          >
            Cluster is healthy
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Health /> renders multiple erros correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Cluster Health
    </h2>
    <button
      class="btn btn-link"
      type="button"
    >
      See all
    </button>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-health__body"
    >
      <div
        class="kubevirt-health__item"
      >
        <div
          class="kubevirt-health__icon kubevirt-health__icon--error"
        >
          <span
            aria-hidden="true"
            class="fa fa-exclamation-circle"
          />
        </div>
        <div>
          <span
            class="kubevirt-health__text"
          >
            Multiple errors
          </span>
          <div
            class="kubevirt-health__text kubevirt-health__subtitle"
          >
            Cluster health is degrated
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
